# flask-course

./: .gitignore  pyproject.toml
flask_course/: example.py  utils.py
flask_course/data/: storage.py  users.json
flask_course/templates/: show.html
flask_course/templates/users/: delete.html  edit.html  index.html  login.html  new.html
