[tool.poetry]
name = "flask-course"
version = "0.1.0"
description = ""
authors = ["avolosevich <Alexander.Volosevich@nexign.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.3"
gunicorn = "^22.0.0"


[tool.poetry.group.dev.dependencies]
black = "^24.4.0"
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
